fix SpecificBook image align and fix grand total toFixed(2)

--- a/src/components/book-list/styles.css
+++ b/src/components/book-list/styles.css
@@ -204,7 +204,6 @@ body {
   flex-wrap: wrap;
   flex-direction: row;
   flex-grow: 1;
-  justify-content: left;
   width: 75%;
   text-align: center;
   align-items: flex-start;
@@ -236,8 +235,8 @@ body {
   box-shadow: 0 0 10px #461d94;
 }
 
-.book__image,
-.image__not_found {
+.book .book__image,
+.book .image__not_found {
   max-width: 100%;
   max-height: 100%;
   padding: 3%;
